# bitarray

./: CHANGELOG.md  README.md  bitarray.cabal  default.nix
app/: Main.hs
nix/: overrides.nix
src/: BitArray.hs  Bitarray.hs
src/BitArray/: Internal.hs  Mutable.hs
